--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
   <head>
 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  	<title>Badger Learning</title>
-  	<meta name="Practice!" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  	<title>UXD Code Toolkit</title>
+  	<meta name="Practice!"/>
 
-  	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+  	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type='text/css'>
 
   </head>
 
   <body>
-
-    <div class="container">
-      <div class="grid-row clearfix">
-        <h1>BADGER LEARNING</h1>
-      </div>
-      <div class="grid-row clearfix">
-        <h2>Put stuff here!</h2>
-        <p>Like really cute badger pics</p>
-        <img class="badger" src="./images/badger-background.jpg" alt="cute badger pic">
-      </div>
-    </div>
 
   </body>
 
