--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 
   	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <link rel="stylesheet" href="css/normalize.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 
   </head>
 
-  <body>
-
+  <body class="container">
+    <div class="btn">
+      I'm a button
+    </div>
   </body>
 
 </html>
