--- a/index.html
+++ b/index.html
@@ -10,9 +10,37 @@
   	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <link rel="stylesheet" href="css/normalize.css">
 
+    <!-- font links -->
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+
   </head>
 
   <body>
+
+    <header>
+        <h1>UX Code Toolkit</h1>
+    </header>
+
+    <div class="grid-row">
+      <div class="side-nav grid-column grid-third">
+        <a href="#">Form elements</a>
+      </div>
+      <div class="grid-column grid-two-third">
+        <div>
+          <label for="dropdown">This is a dropdown</label>
+          <select name="dropdown" class="dropdown field">
+            <option value="value 1">Value 1</option>
+            <option value="value 2">Value 2</option>
+            <option value="value 3">Value 3</option>
+            <option value="value 4">Value 4</option>
+            <option value="value 5">Value 5</option>
+            <option value="value 6">Value 6</option>
+            <option value="value 7">Value 7</option>
+          </select>
+        </div>
+      </div>
+    </div>
 
   </body>
 
