added radio buttons

--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
           <input type="text" name="lastname" class="field">
         </form>
         <div class="spacer">
+          <label >This is a radio list:</label>
+          <div>
+            <input type="radio" name="examplelist" value="You can only">
+              <label class="radioitem" for="youcanonly">You can only</label>
+          </div>
+          <div>
+            <input type="radio" name="examplelist" value="Select one">
+              <label class="radioitem" for="radio2">Select one</label>
+          </div>
+          <div>
+            <input type="radio" name="examplelist"  value="From this list">
+              <label class="radioitem" for="radio3">From this list</label>
+          </div>
         </div>
       </div>
     </div>
