this fixes radio styling issue. Also added flexbox stylesheet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   	<meta name="Practice!"/>
 
   	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/flexbox.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 
