adding flex to the main elements and sorting out margins

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <h1>UX Code Toolkit</h1>
     </header>
 
-    <div class="grid-row">
-      <div class="side-nav grid-column grid-third">
+    <div class="row">
+      <div class="side column">
         <div class="list"><a href="#">Form elements</a></div>
         <div class="list"><a href="#">Typography</a></div>
         <div class="list"><a href="#">Placeholders</a></div>
       </div>
-      <div class="grid-column grid-two-third">
+      <div class="main column">
         <label for="dropdown">This is a dropdown:</label>
         <select name="dropdown" class="dropdown field">
           <option value="value 1">Value 1</option>
@@ -43,7 +43,7 @@
         </select>
         <div class="spacer">
           <label for="btn">This is a button:</label>
-          <div class="btn">I'm a button</button>
+          <div class="btn">I'm a button</button></div>
         </div>
         <form class="spacer">
           <label for="firstname">First name:</label>
