--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
   	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <link rel="stylesheet" href="css/flexbox.css">
+    <link rel="stylesheet" href="css/accordion.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 
     <!-- font links -->
@@ -65,7 +66,37 @@
               <label class="radioLabel" for="radio3">From this list</label>
             </div>
           </form>
-        </section>
+          <section class="acc-group">
+            <p class="acc-title">Selecting individual accordions:</p>
+              <div class="acc">
+                  <input id="acc-one" type="radio" name="acc">
+                  <label for="acc-one"> Accordion One </label>
+                    <div class="acc-content">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum? Saepe, itaque.</p>
+                  </div>
+              </div>
+              <div class="acc">
+                  <input id="acc-two" type="radio" name="acc">
+                  <label for="acc-two"> Accordion Two </label>
+                    <div class="acc-content">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum? Saepe, itaque.</p>
+                  </div>
+              </div>
+              <div class="acc">
+                  <input id="acc-three" type="radio" name="acc">
+                  <label for="acc-three"> Accordion Three </label>
+                    <div class="acc-content">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum? Saepe, itaque.</p>
+                  </div>
+              </div>
+              <div class="acc">
+                  <input id="acc-four" type="radio" name="acc">
+                  <label for="acc-four"> Accordion Four </label>
+                    <div class="acc-content">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum? Saepe, itaque.</p>
+                  </div>
+              </div>
+            </div>
       </section>
 
   </body>
