changes to background colour

--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
                   </div>
               </div>
             </div>
+          </section>
+        </section>
       </section>
-
   </body>
 
 </html>
