added a chevron to the accordion and on click the chevron rotates

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   	<title>UXD Code Toolkit</title>
   	<meta name="Practice!"/>
+
+    <!-- fontawesome link -->
+    <script src="https://use.fontawesome.com/7812910a14.js"></script>
+
     <link rel="stylesheet" href="css/normalize.css">
   	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <link rel="stylesheet" href="css/flexbox.css">
@@ -70,28 +74,29 @@
             <p class="acc-title">Selecting individual accordions:</p>
               <div class="acc">
                   <input id="acc-one" type="radio" name="acc">
-                  <label for="acc-one"> Accordion One </label>
+                  <label for="acc-one"> Accordion One <div class="expand"><i class="fa fa-chevron-down rotate" aria-hidden="true"></i></div></label>
                     <div class="acc-content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum? Saepe, itaque.</p>
                   </div>
               </div>
               <div class="acc">
                   <input id="acc-two" type="radio" name="acc">
-                  <label for="acc-two"> Accordion Two </label>
+                  <label for="acc-two"> Accordion Two <div class="expand"><i class="fa fa-chevron-down rotate" aria-hidden="true"></i></div></label>
                     <div class="acc-content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum? Saepe, itaque.</p>
                   </div>
               </div>
               <div class="acc">
                   <input id="acc-three" type="radio" name="acc">
-                  <label for="acc-three"> Accordion Three </label>
+                  <label for="acc-three"> Accordion Three <div class="expand"><i class="fa fa-chevron-down rotate" aria-hidden="true"></i></div></label>
                     <div class="acc-content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum? Saepe, itaque.</p>
                   </div>
+
               </div>
               <div class="acc">
                   <input id="acc-four" type="radio" name="acc">
-                  <label for="acc-four"> Accordion Four </label>
+                  <label for="acc-four"> Accordion Four <div class="expand"><i class="fa fa-chevron-down rotate" aria-hidden="true"></i></div></label>
                     <div class="acc-content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum? Saepe, itaque.</p>
                   </div>
@@ -100,6 +105,11 @@
           </section>
         </section>
       </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/index.js"></script>
+
   </body>
 
 </html>
