added variables, side anchor links style change, button gradient, went crazy

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <div class="row">
         <section class="side column">
           <ul>
-            <li><a href="#">Form elements</a></li>
-            <li><a href="#">Typography</a></li>
-            <li><a href="#">Placeholders</a></li>
+            <li><a href="#"><ins>Form elements</ins></a></li>
+            <li><a href="#"><ins>Typography</ins></a></li>
+            <li><a href="#"><ins>Placeholders</ins></a></li>
           </ul>
         </section>
         <section class="main column">
